@@ -3,7 +3,8 @@ Changes for 3.0.4rc1
 New features:
 
 Bug fixes:
-..F....... [ZBX-10825] reverted table header capitalization. fixed calendar header (asaveljevs, Pavel) 
+........S. [ZBX-10723] forced quoting of item key parameter if macro resolution resulted in unquoted parameter with leading spaces (gleb)
+..F....... [ZBX-10825] reverted table header capitalization. fixed calendar header (asaveljevs, Pavel)
 .......PS. [ZBX-8096] allowed "noSuchName" to be returned for SNMPv2 and SNMPv3 (asaveljevs)
 ..F....... [ZBX-10794] fixed saving of "Show text as HTML" checkbox in Monitoring->Screens (Cemeris)
 ..F....... [ZBX-10504] decreased padding and margins in tables and across the whole UI (Pavel)
@@ -1390,6 +1391,7 @@ Changes for 2.2.14rc1
 New features:
 
 Bug fixes:
+........S. [ZBX-10723] forced quoting of item key parameter if macro resolution resulted in unquoted parameter with leading spaces (gleb)
 .......PS. [ZBX-8096] allowed "noSuchName" to be returned for SNMPv2 and SNMPv3 (asaveljevs)
 
 --------------------------------------------------------------------------------
